--- a/gestor/templates/paginacion.html
+++ b/gestor/templates/paginacion.html
@@ -1,46 +1,40 @@
-{% if paginator.num_pages > 1%}
-<div class="d-flex justify-content-center">
-    <ul class="pagination">
+{% if paginator.num_pages > 1 %}
+<div class="d-flex justify-content-center mt-4">
+    <ul class="pagination shadow-sm">
+        <!-- Botón Anterior -->
         {% if entity.has_previous %}
-            <li class="page-item d-none d-sm-block"><a class="page-link" href="?page={{ entity.previous_page_number }}#pagtable">Anterior</a></li>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ entity.previous_page_number }}#pagtable">«</a>
+            </li>
+        {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">«</span>
+            </li>
         {% endif %}
+
+        <!-- Mostrar primeras páginas, puntos suspensivos y rango dinámico -->
         {% for page in paginator.page_range %}
-            {% if forloop.last and page != entity.number and paginator.num_pages > 7 %} 
-                {% if entity.next_page_number != paginator.num_pages%}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ entity.number | add:1}}#pagtable">...</a>
+            {% if page == 1 or page == paginator.num_pages or page >= entity.number|add:-2 and page <= entity.number|add:2 %}
+                <li class="page-item {% if page == entity.number %}active{% endif %}">
+                    <a class="page-link" href="?page={{ page }}#pagtable">{{ page }}</a>
                 </li>
-                {% endif %}
-            <li class="page-item">
-                    <a class="page-link" href="?page={{paginator.num_pages}}#pagtable">{{paginator.num_pages}}</a>
-            </li>
-            {% endif %}
-            {% if page == entity.number and page > 7 %}
-            <li class="page-item">
-                <a class="page-link" href="?page={{ page | add:-1 }}#pagtable">...</a>
-            </li>    
-            {% endif %}
-            {% if page < 7 or page == entity.number %}
-            <li class="page-item {% if page == entity.number %}active{% endif %}">
-                <a class="page-link" href="?page={{ page }}#pagtable">{{ page }}</a>
-            </li>
+            {% elif page == 2 and entity.number > 4 %}
+                <li class="page-item disabled"><span class="page-link">...</span></li>
+            {% elif page == paginator.num_pages|add:-1 and entity.number < paginator.num_pages|add:-3 %}
+                <li class="page-item disabled"><span class="page-link">...</span></li>
             {% endif %}
         {% endfor %}
+
+        <!-- Botón Siguiente -->
         {% if entity.has_next %}
-            <li class="page-item d-none d-sm-block">
-                <a class="page-link" href="?page={{ entity.next_page_number }}#pagtable">Siguiente</a>
+            <li class="page-item">
+                <a class="page-link" href="?page={{ entity.next_page_number }}#pagtable">»</a>
+            </li>
+        {% else %}
+            <li class="page-item disabled">
+                <span class="page-link">»</span>
             </li>
         {% endif %}
     </ul>
-</div>
-<div class="d-flex justify-content-center d-sm-none">            
-    {% if entity.has_previous %}
-        <span class="page-item"><a  class="page-link" href="?page={{ entity.previous_page_number }}#pagtable">Anterior</a></span>
-    {% endif %}
-    {% if entity.has_next %}
-        <span class="page-item"><a class="page-link" href="?page={{ entity.next_page_number }}#pagtable">Siguiente</a></span>
-    {% endif %}
-    <br>
-    <br>
 </div>
 {% endif %}
