--- a/gestor/static/style.css
+++ b/gestor/static/style.css
@@ -1,5 +1,8 @@
-/* Google Fonts - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+@page {
+  size: A4;
+  font-family: "DejaVu Sans";
+}
 * {
   margin: 0;
   padding: 0;
@@ -9,6 +12,7 @@
 body {
   min-height: 100%;
   background: #e3f2fd;
+  font-family: "DejaVu Sans", sans-serif;
 }
 nav {
   position: fixed;
@@ -330,3 +334,11 @@ nav.open ~ .overlay {
   min-height: 400px;
   min-width:400px;
 }
+.chart5{
+  width: 100%;
+  height: 100%;
+  min-height: 400px;
+  min-width:400px;
+}
+
+
