--- a/gestor/templates/estadisticas.html
+++ b/gestor/templates/estadisticas.html
@@ -1,56 +1,78 @@
 {% extends 'base.html' %}
 
-{% block title %} | Estadisticas {% endblock title %}
+{% block title %} | Estadísticas {% endblock title %}
 
 {% block content %}
-<div class="text-center">
-  <br><br>
-  <h1>Estadisticas</h1>
-
-</div>
-<div class="content7">
-  <div class="container">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto">
-      <div id="chart" class="chart"></div>
-      </div>
-  </div>
-  <div class="container">
-    <div class="row my-4">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto">
-      <div id="chart2" class="chart2"></div>
-      </div>
+<div class="container py-5">
+    <div class="text-center mb-5">
+        <h1 class="fw-bold">Estadísticas Generales</h1>
     </div>
-  </div>
-</div>
-<div class="content7">
-  <div class="container">
-    <div class="row my-4">
-      <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mx-auto">
-      <div id="chart4" class="chart4"></div>
-      </div>
+
+    <!-- Tarjetas resumen -->
+    <div class="row text-center mb-5">
+        <div class="col-md-4 mb-3">
+            <div class="card border-0 shadow-sm h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Mes actual: {{ mesactual }}</h5>
+                    <p class="card-text">Consultas: <strong>{{ consultasmes }}</strong></p>
+                    <p class="card-text">Pacientes: <strong>{{ pacientesmesactual }}</strong></p>
+                    <p class="card-text">Devengado: <strong>${{ devengadomes }}</strong></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card border-0 shadow-sm h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Año: {{ year }}</h5>
+                    <p class="card-text">Consultas: <strong>{{ consultasanio }}</strong></p>
+                    <p class="card-text">Pacientes: <strong>{{ pacientesanio }}</strong></p>
+                    <p class="card-text">Devengado: <strong>${{ devengadoanio }}</strong></p>
+                  </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-3">
+            <div class="card border-0 shadow-sm h-100">
+                <div class="card-body">
+                    <h5 class="card-title">Total acumulado</h5>
+                    <p class="card-text">Consultas: <strong>{{ totalconsultas }}</strong></p>
+                    <p class="card-text">Pacientes: <strong>{{ totalpacientes }}</strong></p>
+                    <p class="card-text">Devengado: <strong>${{ totaldevengado }}</strong></p>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-<div class="container_1">
-  <div class="conteiner_estad_2">
-    <h4>Mes:{{ mesactual }}</h4>
-    <h4>Consultas: {{ consultasmes }} </h4>
-    <h4>Devengado: ${{ devengadomes }} </h4>
-  </div>
 
-  <div class="conteiner_estad_2">
-    <h4>Año:{{ year }}</h4>
-    <h4>Consultas: {{ consultasanio}} </h4>
-    <h4>Devengado: ${{ devengadoanio}} </h4>
-  </div>
-  <div class="conteiner_estad_2">
-    <h4>Consultas: {{ totalconsultas }} </h4>
-    <h4>Pacientes: {{ totalpacientes }} </h4>
-    <h4>Devengado: ${{ totaldevengado }} </h4>
-  </div>
+    <!-- Gráficos -->
+    <div class="row mb-5">
+        <div class="col-md-12">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div id="chart" style="height: 400px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col-md-6 mb-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div id="chart2" style="height: 350px;"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-6 mb-4">
+            <div class="card shadow-sm">
+                <div class="card-body">
+                    <div id="chart4" style="height: 350px;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
-<script>
-  
-  </script>
+<!-- Script para ECharts -->
+<script src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+
 {% endblock content %}
