--- a/gestor/templates/pacientes/crear_paciente.html
+++ b/gestor/templates/pacientes/crear_paciente.html
@@ -1,35 +1,37 @@
 {% extends 'base.html' %}
 
-{% block title %} | Paciente {% endblock title %}
+{% block title %} | Agregar Paciente {% endblock title %}
+
 {% block extrahead %}
 {{ PacienteForm.media }}
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    <div class="text-center">
-        <br><br>
-        <h1>Agregar paciente</h1>
-        
-    </div>
-</div>
-{% load crispy_forms_tags %}  
-<div class="container">
+{% load crispy_forms_tags %}
+
+<div class="container py-5">
     <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card">
-                <div class="card-header">
+        <div class="col-lg-8 col-md-10">
+            <div class="text-center mb-4">
+                <h2 class="fw-bold">Agregar Paciente</h2>
+                <p class="text-muted">Complete la información del paciente</p>
+            </div>
 
-                </div>
-                <div class="card-body">
-                    <form method="POST" enctype="multipart/form-data">
+            <div class="card shadow rounded-4">
+                <div class="card-body p-4">
+                    <form id="pacienteForm" method="POST" enctype="multipart/form-data" novalidate>
                         {% csrf_token %}
+                        {{ PacienteForm|crispy }}
 
-                        {{ PacienteForm |crispy}}
-                       
-                        <div class="content">
-                            <button type="submit" class="btn btn-primary">Guardar</button>
-                            <a class="btn btn-secondary" href="javascript:history.back()">Cancelar</a>
+                        <div id="formErrors" class="alert alert-danger d-none mt-3"></div>
+
+                        <div class="d-flex justify-content-end mt-4 gap-2">
+                            <button type="submit" class="btn btn-primary">
+                                <i class="bi bi-save"></i> Guardar
+                            </button>
+                            <a href="/pacientes/" class="btn btn-outline-secondary">
+                                <i class="bi bi-x-circle"></i> Cancelar
+                            </a>
                         </div>
                     </form>
                 </div>
@@ -38,3 +40,7 @@
     </div>
 </div>
 {% endblock content %}
+
+{% block extra_js %}
+
+{% endblock %}
